[gd_scene load_steps=2 format=3 uid="uid://cvq1e8oa7bwwd"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_icv7f"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_icv7f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231373, 0.231373, 0.231373, 0.556863)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 84.0
offset_right = 279.0
offset_bottom = 259.0
grow_vertical = 2

[node name="CONTINUE" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUER"

[node name="SETTINGS" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PARAMETRES
"

[node name="TITLESCREEN" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ECRAN DE TITRE"

[node name="QUIT" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUITTER"

[connection signal="pressed" from="VBoxContainer/SETTINGS" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/TITLESCREEN" to="." method="_on_titlescreen_pressed"]
[connection signal="pressed" from="VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
